Add Form and Field signatures to Suggestion Shown. There will be a follow-up CL for adding them to SuggestionFilled also.

Bug: 842370
Change-Id: I75c93dfdd960a653d2e7304188eea8099f0a7eaa
Reviewed-on: https://chromium-review.googlesource.com/1057843
Commit-Queue: Nik Bhagat <nikunjb@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Reviewed-by: Robert Kaplow <rkaplow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559979}
Former-commit-id: dafac94b0fb50c8d6abe94dd97c3f8ff31c83813